Funções, botões, onmouse alerts, console

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 
 </head>
 
-<body> 
+<body onload="load()"> 
 
- <h1> Página inicial </h1>
+ <button type="button" onclick="btn1()">Clique aqui</button>
+ 
+ <h3 id="agradecimento"></h3>
+
+ <button type="button" onclick="btn2()">Limpar</button>
+
+ <button type="button" onclick="btn3()">Redirecionar</button>
+
+ <p id = "passe" onmouseover="trocar(this)" onmouseout="voltar(this)">Passe o mouse aqui</p>
 
 </body>
 
